--- a/references.bib
+++ b/references.bib
@@ -172,130 +172,127 @@
 }
 
 @inproceedings {Opheim,
-booktitle        = {Eurographics Conference Proceedings},
-editor           = {J. L. Encarnacao},
-title            = {{SMOOTHING A DIGITIZED CURVE BY DATA REDUCTION METHODS}},
-author           = {Opheim, Harald},
-year             = {1981},
-publisher        = {The Eurographics Association},
-ISSN             = {1017-4656},
-DOI              = {10.2312/eg.19811012}
+    booktitle    = {Eurographics Conference Proceedings},
+    editor       = {J. L. Encarnacao},
+    title        = {{SMOOTHING A DIGITIZED CURVE BY DATA REDUCTION METHODS}},
+    author       = {Opheim, Harald},
+    year         = {1981},
+    publisher    = {The Eurographics Association},
+    ISSN         = {1017-4656},
+    DOI          = {10.2312/eg.19811012}
 }
 
 @article{Lang,
-author="LANG, T.",
-title="Rules for the robot draughtsmen",
-journal="The Geographical Magazine",
-ISSN="",
-publisher="",
-year="1969",
-month="",
-volume="42",
-number="1",
-pages="50-51",
-URL="https://ci.nii.ac.jp/naid/10026051218/en/",
-DOI="",
+    author       = "LANG, T.",
+    title        = "Rules for the robot draughtsmen",
+    journal      = "The Geographical Magazine",
+    ISSN         = "",
+    publisher    = "",
+    year         = "1969",
+    month        = "",
+    volume       = "42",
+    number       = "1",
+    pages        = "50-51",
+    URL          = "https://ci.nii.ac.jp/naid/10026051218/en/",
+    DOI          = "",
 }
 
 @INPROCEEDINGS{ZhaoSaalfeld,
-    author = {Zhiyuan Zhao and Alan Saalfeld},
-    title = {Linear-time sleeve-fitting polyline simplification algorithms.In},
-    booktitle = {Proceedings of AutoCarto 13},
-    year = {1997},
-    pages = {214--223}
+    author       = {Zhiyuan Zhao and Alan Saalfeld},
+    title        = {Linear-time sleeve-fitting polyline simplification algorithms.In},
+    booktitle    = {Proceedings of AutoCarto 13},
+    year         = {1997},
+    pages        = {214--223}
 }
 
 @article{ReumannWitkam,
   author          = {Reumann, K. and Witkam, A.},
-  title           = {Optimizing curve
-segmentation in computer graphics},
+  title           = {Optimizing curve segmentation in computer graphics},
 }
 
 @misc{ThousandWayToPackBin,
-    author = {Jukka Jylänki},
-    title = {A thousand ways to pack the bin -- a practical approach to two-dimensional rectangle bin packing },
-    year = {2010}
+    author        = {Jukka Jylänki},
+    title         = {A thousand ways to pack the bin -- a practical approach to two-dimensional rectangle bin packing },
+    year          = {2010}
 }
 
 @InProceedings{NofitPolygon,
-author="Burke, Edmund
-and Kendall, Graham",
-editor="Parmee, I. C.",
-title="A New Approach to Packing Non-Convex Polygons Using the No Fit Polygon and Meta-Heuristic and Evolutionary Algorithms",
-booktitle="Adaptive Computing in Design and Manufacture V",
-year="2002",
-publisher="Springer London",
-address="London",
-pages="193--204",
-abstract="Earlier work by the authors has presented a method for packing convex polygons, using a construction known as the no fit polygon. Although the method was shown to be successful, it could only deal with convex polygons. This paper addresses the issue by showing how a non-convex, no fit polygon algorithm can (and should) produce better quality solutions. We demonstrate the approach on two test problems that the authors have used in previous work. The new algorithm does, however, have an increased computational complexity. We tackle this by presenting an algorithm that allows the non-convex, no fit polygon to be approximated. This means that much more of the search space can be considered and computational results show that better quality solutions can be achieved, in less time than when using the full no fit polygon algorithm.",
-isbn="978-0-85729-345-9"
+    author        ="Burke, Edmund and Kendall, Graham",
+    editor        ="Parmee, I. C.",
+    title         ="A New Approach to Packing Non-Convex Polygons Using the No Fit Polygon and Meta-Heuristic and Evolutionary Algorithms",
+    booktitle     ="Adaptive Computing in Design and Manufacture V",
+    year          ="2002",
+    publisher     ="Springer London",
+    address       ="London",
+    pages         ="193--204",
+    abstract      ="Earlier work by the authors has presented a method for packing convex polygons, using a construction known as the no fit polygon. Although the method was shown to be successful, it could only deal with convex polygons. This paper addresses the issue by showing how a non-convex, no fit polygon algorithm can (and should) produce better quality solutions. We demonstrate the approach on two test problems that the authors have used in previous work. The new algorithm does, however, have an increased computational complexity. We tackle this by presenting an algorithm that allows the non-convex, no fit polygon to be approximated. This means that much more of the search space can be considered and computational results show that better quality solutions can be achieved, in less time than when using the full no fit polygon algorithm.",
+    isbn          ="978-0-85729-345-9"
 }
 
 @INPROCEEDINGS{NofitPolygon2,
-  author={Domovic, D. and Rolich, T. and Grundler, D. and Bogovic, S.},
-  booktitle={2014 37th International Convention on Information and Communication Technology, Electronics and Microelectronics (MIPRO)},
-  title={Algorithms for 2D nesting problem based on the no-fit polygon},
-  year={2014},
-  volume={},
-  number={},
-  pages={1094-1099},
-  doi={10.1109/MIPRO.2014.6859732}
+  author          ={Domovic, D. and Rolich, T. and Grundler, D. and Bogovic, S.},
+  booktitle       ={2014 37th International Convention on Information and Communication Technology, Electronics and Microelectronics (MIPRO)},
+  title           ={Algorithms for 2D nesting problem based on the no-fit polygon},
+  year            ={2014},
+  volume          ={},
+  number          ={},
+  pages           ={1094-1099},
+  doi             ={10.1109/MIPRO.2014.6859732}
  }
 
 @inproceedings{Fogel1993OnGA,
-  title={On genetic algorithms for the packing of polygons},
-  author={L. Fogel},
-  year={1993}
+  title           ={On genetic algorithms for the packing of polygons},
+  author          ={L. Fogel},
+  year            ={1993}
 }
 
 @article{FireFly,
-author = {Yesodha, R. and Amudha, T},
-year = {2013},
-month = {05},
-pages = {1003-1010},
-title = {Effectiveness of FireFly Algorithm in solving Bin Packing Problem},
-volume = {3}
+    author        = {Yesodha, R. and Amudha, T},
+    year          = {2013},
+    month         = {05},
+    pages         = {1003-1010},
+    title         = {Effectiveness of FireFly Algorithm in solving Bin Packing Problem},
+    volume        = {3}
 }
 
 @InProceedings{AntColony,
-author="Burke, Edmund
-and Kendall, Graham",
-editor="Parmee, I. C.",
-title="A New Approach to Packing Non-Convex Polygons Using the No Fit Polygon and Meta-Heuristic and Evolutionary Algorithms",
-booktitle="Adaptive Computing in Design and Manufacture V",
-year="2002",
-publisher="Springer London",
-address="London",
-pages="193--204",
-abstract="Earlier work by the authors has presented a method for packing convex polygons, using a construction known as the no fit polygon. Although the method was shown to be successful, it could only deal with convex polygons. This paper addresses the issue by showing how a non-convex, no fit polygon algorithm can (and should) produce better quality solutions. We demonstrate the approach on two test problems that the authors have used in previous work. The new algorithm does, however, have an increased computational complexity. We tackle this by presenting an algorithm that allows the non-convex, no fit polygon to be approximated. This means that much more of the search space can be considered and computational results show that better quality solutions can be achieved, in less time than when using the full no fit polygon algorithm.",
-isbn="978-0-85729-345-9"
+    author        = "Burke, Edmund and Kendall, Graham",
+    editor        = "Parmee, I. C.",
+    title         = "A New Approach to Packing Non-Convex Polygons Using the No Fit Polygon and Meta-Heuristic and Evolutionary Algorithms",
+    booktitle     = "Adaptive Computing in Design and Manufacture V",
+    year          = "2002",
+    publisher     = "Springer London",
+    address       = "London",
+    pages         = "193--204",
+    abstract      = "Earlier work by the authors has presented a method for packing convex polygons, using a construction known as the no fit polygon. Although the method was shown to be successful, it could only deal with convex polygons. This paper addresses the issue by showing how a non-convex, no fit polygon algorithm can (and should) produce better quality solutions. We demonstrate the approach on two test problems that the authors have used in previous work. The new algorithm does, however, have an increased computational complexity. We tackle this by presenting an algorithm that allows the non-convex, no fit polygon to be approximated. This means that much more of the search space can be considered and computational results show that better quality solutions can be achieved, in less time than when using the full no fit polygon algorithm.",
+    isbn          = "978-0-85729-345-9"
 }
 
 @inproceedings{PSO,
-  TITLE = {{Bin Packing Problem with priorities and incompatibilities using PSO: application in a health care community}},
-  AUTHOR = {Laurent, Arnaud and Klement, Nathalie},
-  URL = {https://hal.archives-ouvertes.fr/hal-02329525},
-  BOOKTITLE = {{9th IFAC Conference on Manufacturing Modelling, Management and Control}},
-  ADDRESS = {Berlin, Germany},
-  PAGES = {2744-2749},
-  YEAR = {2019},
-  MONTH = Aug,
-  PDF = {https://hal.archives-ouvertes.fr/hal-02329525/file/LISPEN_MIM_2019_KLEMENT.pdf},
-  HAL_ID = {hal-02329525},
-  HAL_VERSION = {v1},
+  TITLE           = {{Bin Packing Problem with priorities and incompatibilities using PSO: application in a health care community}},
+  AUTHOR          = {Laurent, Arnaud and Klement, Nathalie},
+  URL             = {https://hal.archives-ouvertes.fr/hal-02329525},
+  BOOKTITLE       = {{9th IFAC Conference on Manufacturing Modelling, Management and Control}},
+  ADDRESS         = {Berlin, Germany},
+  PAGES           = {2744-2749},
+  YEAR            = {2019},
+  MONTH           = Aug,
+  PDF             = {https://hal.archives-ouvertes.fr/hal-02329525/file/LISPEN_MIM_2019_KLEMENT.pdf},
+  HAL_ID          = {hal-02329525},
+  HAL_VERSION     = {v1},
 }
 
 @article{JAKOBS1996165,
-    title       = {On genetic algorithms for the packing of polygons},
-    journal         = {European Journal of Operational Research},
-    volume      = {88},
-    number      = {1},
-    pages       = {165-181},
-    year        = {1996},
-    issn        = {0377-2217},
-    doi         = {https://doi.org/10.1016/0377-2217(94)00166-9},
-    url         = {https://www.sciencedirect.com/science/article/pii/0377221794001669},
-    author      = {Stefan Jakobs},
-    keywords        = {Optimization, Genetic algorithms, Mathematical programming, Adaptive processes, Packing problems},
-    abstract        = {A genetic algorithm for placing polygons on a rectangular board is proposed. The algorithm is improved by combination with deterministic methods.}
+    title         = {On genetic algorithms for the packing of polygons},
+    journal       = {European Journal of Operational Research},
+    volume        = {88},
+    number        = {1},
+    pages         = {165-181},
+    year          = {1996},
+    issn          = {0377-2217},
+    doi           = {https://doi.org/10.1016/0377-2217(94)00166-9},
+    url           = {https://www.sciencedirect.com/science/article/pii/0377221794001669},
+    author        = {Stefan Jakobs},
+    keywords      = {Optimization, Genetic algorithms, Mathematical programming, Adaptive processes, Packing problems},
+    abstract      = {A genetic algorithm for placing polygons on a rectangular board is proposed. The algorithm is improved by combination with deterministic methods.}
 }
