Add contour tracing subsection

--- a/references.bib
+++ b/references.bib
@@ -296,3 +296,41 @@
     keywords      = {Optimization, Genetic algorithms, Mathematical programming, Adaptive processes, Packing problems},
     abstract      = {A genetic algorithm for placing polygons on a rectangular board is proposed. The algorithm is improved by combination with deterministic methods.}
 }
+
+@article{Miyatake1997,
+    author        = "Miyatake, Takafumi and Matsushima, Hitoshi and Ejiri, Masakazu",
+    year          = "1997",
+    title         = "Contour representation of binary images using run-type direction codes",
+    journal       = "Machine Vision and Applications",
+    pages         = "193-200",
+    volume        = "9",
+    number        = "1",
+    abstract      = "This paper proposes a fast and high-definition contour-tracing algorithm for digitized binary images. Only the coordinates of white-to-black and black-to-white transition points on each scan line are used as data for the contour tracing. The resulting description of the contour is the combined set of ten newly developed run-type direction codes. The code is determined automatically by an automaton while the horizontal coordinates of two transition points in the two adjacent scan lines are compared. The processing speed of this algorithm depends on the number of transition points of an image, and, thus, it has the advantage over conventional algorithms, where the speed usually depends on the number of pixels. A high-definition-type contour description is obtained and complete restoration of the original image is possible.",
+    issn          = "1432-1769",
+    url           = "https://doi.org/10.1007/s001380050040",
+    doi           = "10.1007/s001380050040"
+}
+
+@article{Shoji,
+    author        = "Shoji, Kenji and Miyamichi, Juichi and Hirano, Kunihiko",
+    year          = "1999",
+    title         = "Contour representation of binary images using run-type direction codes",
+    journal       = "Machine Vision and Applications",
+    pages         = "1-11",
+    volume        = "30",
+    number        = "11",
+    issn          = "0882-1666",
+    url           = "https://doi.org/10.1002/(SICI)1520-684X(199910)30:11<1::AID-SCJ1>3.0.CO;2-S",
+    doi           = "10.1002/(SICI)1520-684X(199910)30:11<1::AID-SCJ1>3.0.CO;2-S"
+}
+
+@article{TehChin,
+    author        = {Teh, C.-H and Chin, Roland T},
+    year          = {1989},
+    month         = {09},
+    pages         = {859 - 872},
+    title         = {On the detection of dominant points on digital curve},
+    volume        = {11},
+    journal       = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+    doi           = {10.1109/34.31447}
+}
